Update langchain_testing notebook: enhance summary instructions and improve execution tracking

--- a/notebooks/langchain_testing.ipynb
+++ b/notebooks/langchain_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "id": "ab162191",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "00962b9d",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "3e334a80",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "588a6fd5",
    "metadata": {},
    "outputs": [],
@@ -65,40 +65,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "bdd16028",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 35/35 [03:02<00:00,  5.23s/it]\n"
+     ]
+    }
+   ],
    "source": [
+    "from tqdm import tqdm\n",
+    "\n",
     "results = []\n",
     "\n",
-    "data_sample = data[:1]\n",
+    "data_sample = data #data[:1]\n",
     "\n",
-    "for item in data_sample:\n",
+    "for item in tqdm(data_sample):\n",
     "\n",
     "    version_1 = item['version_1']\n",
     "    version_2 = item['version_2']\n",
     "    ref_summary = item['ref_summary']\n",
     "\n",
     "    msg = [\n",
-    "    SystemMessage(\n",
-    "        content=(\n",
-    "            \"You are a helpful assistant that summarizes the differences \"\n",
-    "            \"between two versions of a text.\"\n",
-    "        )\n",
-    "    ),\n",
+    "        SystemMessage(\n",
+    "            content=(\n",
+    "                \"You are an urban planning and regulatory documentation expert, \"\n",
+    "                \"specializing in Norwegian zoning plans. Your role is to assist \"\n",
+    "                \"case workers by identifying and clearly summarizing the differences \"\n",
+    "                \"between two versions of a zoning plan text. The summary should be as brief \"\n",
+    "                \"as possible, yet clear and informative. Avoid unnecessary details and write \"\n",
+    "                \"the summary in Norwegian. If version 1 contains text, but not version 2, \"\n",
+    "                \"it means the text has been removed. If it's the other way around, the \"\n",
+    "                \"text has been added. Do not refer to version 1 or version 2 in the \"\n",
+    "                \"summary. Only describe what has been removed, added, or changed.\"\n",
+    "            )\n",
+    "        ),\n",
     "        HumanMessage(\n",
     "            content=f\"\"\"\\\n",
-    "    Please summarize the differences between the following two versions of a text:\n",
+    "Summarize the differences between the following two versions:\n",
     "\n",
-    "    Version 1:\n",
-    "    {version_1}\n",
+    "Version 1:\n",
+    "{version_1}\n",
     "\n",
-    "    Version 2:\n",
-    "    {version_2}\n",
-    "    \"\"\"\n",
-    "        )\n",
-    "    ]\n",
+    "Version 2:\n",
+    "{version_2}\n",
+    "\n",
+    "Summary: \n",
+    "\"\"\"\n",
+    "    )\n",
+    "]\n",
     "\n",
     "    try: \n",
     "        response = llm.invoke(msg)\n",
@@ -116,12 +135,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "114cf045",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(base_dir / f\"results/{config['OPENAI_DEPLOYMENT_NAME']}_SHOT.jsonl\", \"w\") as f:\n",
+    "with open(base_dir / f\"results/{config['OPENAI_DEPLOYMENT_NAME']}_ZEROSHOT_test_4.jsonl\", \"w\") as f:\n",
     "    for result in results:\n",
     "        json.dump(result, f, ensure_ascii=False)\n",
     "        f.write('\\n')"
