Update execution counts and format examples in langchain_testing notebook

--- a/notebooks/langchain_testing.ipynb
+++ b/notebooks/langchain_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
    "id": "ab162191",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "id": "00962b9d",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "id": "3e334a80",
    "metadata": {},
    "outputs": [],
@@ -45,14 +45,12 @@
     "llm = AzureChatOpenAI(\n",
     "    deployment_name=config['OPENAI_DEPLOYMENT_NAME'],\n",
     "    temperature=0.0\n",
-    ")\n",
-    "\n",
-    "# TODO: Maybe for this task i should experiment with temperature"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "id": "588a6fd5",
    "metadata": {},
    "outputs": [],
@@ -65,7 +63,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
+   "id": "fc1e85c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eksempel 1:\n",
+      "Versjon 1:\n",
+      "Det tillates maks en boenhet per tomt.\n",
+      "\n",
+      "Versjon 2:\n",
+      "Det tillates inntil to boenheter per tomt.\n",
+      "\n",
+      "Oppsummering:\n",
+      "Tillatt antall boenheter per tomt er økt fra en til to.\n",
+      "##\n",
+      "\n",
+      "Eksempel 2:\n",
+      "Versjon 1:\n",
+      "Innenfor området skal det etableres grønne tak på alle bygninger over 100 m².\n",
+      "\n",
+      "Versjon 2:\n",
+      "\n",
+      "\n",
+      "Oppsummering:\n",
+      "Bestemmelsen om obligatoriske grønne tak på bygg over 100 m² er fjernet.\n",
+      "##\n",
+      "\n",
+      "Eksempel 3:\n",
+      "Versjon 1:\n",
+      "Bygg skal ikke overstige en mønehøyde på 7,5 meter.\n",
+      "\n",
+      "Versjon 2:\n",
+      "Bygg skal ikke overstige en mønehøyde på 8,5 meter.\n",
+      "\n",
+      "Oppsummering:\n",
+      "Tillatt mønehøyde er økt fra 7,5 meter til 8,5 meter.\n",
+      "##\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def format_examples(example_subset): \n",
+    "    # Formats the examples into a string for later prompt\n",
+    "    formatted = []\n",
+    "    for i, ex in enumerate(example_subset):\n",
+    "        formatted.append(\n",
+    "            f\"Eksempel {i+1}:\\n\"\n",
+    "            f\"Versjon 1:\\n{ex['version_1']}\\n\\n\"\n",
+    "            f\"Versjon 2:\\n{ex['version_2']}\\n\\n\"\n",
+    "            f\"Oppsummering:\\n{ex['ref_summary']}\\n##\\n\"\n",
+    "        )\n",
+    "    \n",
+    "    return \"\\n\".join(formatted)\n",
+    "\n",
+    "#ids = [27]\n",
+    "ids = [27, 39, 23]\n",
+    "\n",
+    "examples = [next(ex for ex in data if ex[\"id\"] == id) for id in ids]\n",
+    "\n",
+    "formatted_examples = format_examples(examples)\n",
+    "\n",
+    "print(formatted_examples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "id": "bdd16028",
    "metadata": {},
    "outputs": [
@@ -73,7 +141,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [03:02<00:00,  5.23s/it]\n"
+      "<>:42: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:42: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "C:\\Users\\sbfro\\AppData\\Local\\Temp\\ipykernel_22028\\3028368799.py:42: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  \"\"\"\n",
+      "100%|██████████| 35/35 [03:06<00:00,  5.33s/it]\n"
      ]
     }
    ],
@@ -91,21 +163,25 @@
     "    ref_summary = item['ref_summary']\n",
     "\n",
     "    msg = [\n",
-    "        SystemMessage(\n",
-    "            content=(\n",
-    "                \"You are an urban planning and regulatory documentation expert, \"\n",
-    "                \"specializing in Norwegian zoning plans. Your role is to assist \"\n",
-    "                \"case workers by identifying and clearly summarizing the differences \"\n",
-    "                \"between two versions of a zoning plan text. The summary should be as brief \"\n",
-    "                \"as possible, yet clear and informative. Avoid unnecessary details and write \"\n",
-    "                \"the summary in Norwegian. If version 1 contains text, but not version 2, \"\n",
-    "                \"it means the text has been removed. If it's the other way around, the \"\n",
-    "                \"text has been added. Do not refer to version 1 or version 2 in the \"\n",
-    "                \"summary. Only describe what has been removed, added, or changed.\"\n",
-    "            )\n",
-    "        ),\n",
-    "        HumanMessage(\n",
-    "            content=f\"\"\"\\\n",
+    "    SystemMessage(\n",
+    "        content=(\n",
+    "            \"You are an urban planning and regulatory documentation expert, \"\n",
+    "            \"specializing in Norwegian zoning plans. Your role is to assist \"\n",
+    "            \"case workers by identifying and clearly summarizing the differences \"\n",
+    "            \"between two versions of a zoning plan text. The summary should be as brief \"\n",
+    "            \"as possible, yet clear and informative. Avoid unnecessary details and write \"\n",
+    "            \"the summary in Norwegian. If version 1 contains text, but not version 2, \"\n",
+    "            \"it means the text has been removed. If it's the other way around, the \"\n",
+    "            \"text has been added. Do not refer to version 1 or version 2 in the \"\n",
+    "            \"summary. Only describe what has been removed, added, or changed.\"\n",
+    "        )\n",
+    "    ),\n",
+    "    HumanMessage(\n",
+    "        content=f\"\"\"\\  \n",
+    "Use the examples to guide word chioce.\n",
+    "\n",
+    "{formatted_examples}\n",
+    "\n",
     "Summarize the differences between the following two versions:\n",
     "\n",
     "Version 1:\n",
@@ -135,12 +211,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "id": "114cf045",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(base_dir / f\"results/{config['OPENAI_DEPLOYMENT_NAME']}_ZEROSHOT_test_4.jsonl\", \"w\") as f:\n",
+    "with open(base_dir / f\"results/{config['OPENAI_DEPLOYMENT_NAME']}/{config['OPENAI_DEPLOYMENT_NAME']}_ENG_FEWSHOT_3.jsonl\", \"w\") as f:\n",
     "    for result in results:\n",
     "        json.dump(result, f, ensure_ascii=False)\n",
     "        f.write('\\n')"
