Update execution counts and refine example summaries in langchain_testing notebook

--- a/notebooks/langchain_testing.ipynb
+++ b/notebooks/langchain_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "id": "ab162191",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "id": "00962b9d",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "id": "3e334a80",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "id": "588a6fd5",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "id": "fc1e85c1",
    "metadata": {},
    "outputs": [
@@ -73,35 +73,35 @@
      "text": [
       "Eksempel 1:\n",
       "Versjon 1:\n",
-      "Det tillates maks en boenhet per tomt.\n",
+      "5. Bestemmelser til bestemmelsesområder  5.1 Bestemmelser til bestemmelsesområde (område #1, #Masseutak) • Innenfor området tillates det uttak av masser.  • Anleggsarbeid skal ikke skje i påska (Skjærtorsdag - 2.påskedag), pinse (pinseaften 2.pinsedag), jul (Julaften - 2. juledag), nyttårshelg eller offentlige høytidsdager. • Driftstid skal avgrenses til 08.00-20.00, mandag - torsdag. • Ved støvplager skal det iverksetters avbøtende tiltak som for eksempel vanning, salting eller liknede • Uttaksområdet skal deles opp i etapper. Hver etappe skal ha en avslutningsplan. Ved opphør av utbygging over 2 år skal massetaket avsluttes og tiltakene i avslutningsplanen skal gjennomføres. \n",
       "\n",
       "Versjon 2:\n",
-      "Det tillates inntil to boenheter per tomt.\n",
+      "\n",
       "\n",
       "Oppsummering:\n",
-      "Tillatt antall boenheter per tomt er økt fra en til to.\n",
+      "Hele bestemmelsen for bestemmelsesområde #1 Masseutak er fjernet, inkludert tillatelse til masseuttak, arbeidstidsbegrensninger, krav om avbøtende tiltak, etappevis uttak og avslutningsplan.\n",
       "##\n",
       "\n",
       "Eksempel 2:\n",
       "Versjon 1:\n",
-      "Innenfor området skal det etableres grønne tak på alle bygninger over 100 m².\n",
+      "Belysning av fellesområder skal utformes slik at det ikke oppstår lysforurensning mot nærliggende naturområder.\n",
       "\n",
       "Versjon 2:\n",
-      "\n",
+      "Belysning av fellesområder skal utformes i tråd med kommunens retningslinjer for utendørs belysning.\n",
       "\n",
       "Oppsummering:\n",
-      "Bestemmelsen om obligatoriske grønne tak på bygg over 100 m² er fjernet.\n",
+      "Kravet om å unngå lysforurensning mot naturområder er erstattet med henvisning til kommunale retningslinjer.\n",
       "##\n",
       "\n",
       "Eksempel 3:\n",
       "Versjon 1:\n",
-      "Bygg skal ikke overstige en mønehøyde på 7,5 meter.\n",
+      "Før igangsetting av anleggsarbeidene skal det utarbeides en teknisk plan for gjennomføringen av tiltaket. Denne planen skal godkjennes av kommunen før arbeidene starter. Teknisk plan skal inneholde en beskrivelse av de tekniske løsningene som skal benyttes, herunder blant annet vann- og avløpsløsninger, brannvann og overvannshåndtering. \n",
       "\n",
       "Versjon 2:\n",
-      "Bygg skal ikke overstige en mønehøyde på 8,5 meter.\n",
+      "Før igangsetting av anleggsarbeidene skal det utarbeides en teknisk plan for gjennomføringen av tiltaket. Denne planen skal godkjennes av kommunen før arbeidene starter. Teknisk plan skal inneholde en beskrivelse av de tekniske løsningene som skal benyttes, herunder blant annet vann- og avløpsløsninger og overvannshåndtering. \n",
       "\n",
       "Oppsummering:\n",
-      "Tillatt mønehøyde er økt fra 7,5 meter til 8,5 meter.\n",
+      "Brannvann er fjernet fra kravene til innhold i teknisk plan.\n",
       "##\n",
       "\n"
      ]
@@ -122,7 +122,7 @@
     "    return \"\\n\".join(formatted)\n",
     "\n",
     "#ids = [27]\n",
-    "ids = [27, 39, 23]\n",
+    "ids = [14, 22, 15]\n",
     "\n",
     "examples = [next(ex for ex in data if ex[\"id\"] == id) for id in ids]\n",
     "\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "id": "bdd16028",
    "metadata": {},
    "outputs": [
@@ -141,20 +141,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:42: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "<>:42: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "C:\\Users\\sbfro\\AppData\\Local\\Temp\\ipykernel_22028\\3028368799.py:42: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "  \"\"\"\n",
-      "100%|██████████| 35/35 [03:06<00:00,  5.33s/it]\n"
+      "100%|██████████| 35/35 [05:06<00:00,  8.76s/it]\n"
      ]
     }
    ],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
+    "with open(base_dir / 'data/val_set.json', 'r') as f:\n",
+    "    test_set = json.load(f)\n",
+    "\n",
     "results = []\n",
     "\n",
-    "data_sample = data #data[:1]\n",
+    "data_sample = test_set\n",
     "\n",
     "for item in tqdm(data_sample):\n",
     "\n",
@@ -165,32 +164,32 @@
     "    msg = [\n",
     "    SystemMessage(\n",
     "        content=(\n",
-    "            \"You are an urban planning and regulatory documentation expert, \"\n",
-    "            \"specializing in Norwegian zoning plans. Your role is to assist \"\n",
-    "            \"case workers by identifying and clearly summarizing the differences \"\n",
-    "            \"between two versions of a zoning plan text. The summary should be as brief \"\n",
-    "            \"as possible, yet clear and informative. Avoid unnecessary details and write \"\n",
-    "            \"the summary in Norwegian. If version 1 contains text, but not version 2, \"\n",
-    "            \"it means the text has been removed. If it's the other way around, the \"\n",
-    "            \"text has been added. Do not refer to version 1 or version 2 in the \"\n",
-    "            \"summary. Only describe what has been removed, added, or changed.\"\n",
+    "            \"Du er en fagperson med ekspertise innen arealplanlegging og \"\n",
+    "            \"reguleringsplaner. Din oppgave er å bistå saksbehandlere med å \"\n",
+    "            \"identifisere og oppsummere forskjellene mellom to versjoner av \"\n",
+    "            \"tekst hentet fra en reguleringsplan. Oppsummeringen skal være så \"\n",
+    "            \"kort som mulig, men fortsatt tydelig og informativ. Unngå unødvendige \"\n",
+    "            \"detaljer. Dersom versjon 1 inneholder tekst, men ikke versjon 2, betyr \"\n",
+    "            \"det at teksten har blitt fjernet. Hvis det er omvendt har teksten blitt \"\n",
+    "            \"lagt til. Ikke referer til versjon 1 eller versjon 2 i oppsummeringen. \"\n",
+    "            \"Beskriv kun hva som er fjernet, lagt til eller endret.\"\n",
     "        )\n",
     "    ),\n",
     "    HumanMessage(\n",
-    "        content=f\"\"\"\\  \n",
-    "Use the examples to guide word chioce.\n",
+    "        content=f\"\"\"\\\n",
+    "Bruk eksemplene som hjelp til å velge riktig ord.\n",
     "\n",
     "{formatted_examples}\n",
+    "               \n",
+    "Oppsummer forskjellene mellom følgende to versjoner:\n",
     "\n",
-    "Summarize the differences between the following two versions:\n",
-    "\n",
-    "Version 1:\n",
+    "Versjon 1:\n",
     "{version_1}\n",
     "\n",
-    "Version 2:\n",
+    "Versjon 2:\n",
     "{version_2}\n",
     "\n",
-    "Summary: \n",
+    "Oppsummering:\n",
     "\"\"\"\n",
     "    )\n",
     "]\n",
@@ -211,12 +210,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "id": "114cf045",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(base_dir / f\"results/{config['OPENAI_DEPLOYMENT_NAME']}/{config['OPENAI_DEPLOYMENT_NAME']}_ENG_FEWSHOT_3.jsonl\", \"w\") as f:\n",
+    "with open(base_dir / f\"results/{config['OPENAI_DEPLOYMENT_NAME']}/{config['OPENAI_DEPLOYMENT_NAME']}_TESTSET.jsonl\", \"w\") as f:\n",
     "    for result in results:\n",
     "        json.dump(result, f, ensure_ascii=False)\n",
     "        f.write('\\n')"
