Update execution counts and add example formatting in llama_testing notebook

--- a/notebooks/llama_testing.ipynb
+++ b/notebooks/llama_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "070559dc",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0a37492f",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,67 @@
     "base_dir = Path(os.getcwd()).parent\n",
     "\n",
     "config = load_config(base_dir / 'secrets.yaml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e8db11c7-5502-4c55-990c-e944b9251dfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(base_dir / 'data/val_set.json', 'r') as f:\n",
+    "    data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9e86221f-adaa-4735-80d2-617a19e39c36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eksempel 1:\n",
+      "Versjon 1:\n",
+      "Det tillates maks en boenhet per tomt.\n",
+      "\n",
+      "Versjon 2:\n",
+      "Det tillates inntil to boenheter per tomt.\n",
+      "\n",
+      "Oppsummering:\n",
+      "Tillatt antall boenheter per tomt er økt fra en til to.\n",
+      "##\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def format_examples(example_subset): \n",
+    "    # Formats the examples into a string for later prompt\n",
+    "    formatted = []\n",
+    "    for i, ex in enumerate(example_subset):\n",
+    "        formatted.append(\n",
+    "            f\"Eksempel {i+1}:\\n\"\n",
+    "            f\"Versjon 1:\\n{ex['version_1']}\\n\\n\"\n",
+    "            f\"Versjon 2:\\n{ex['version_2']}\\n\\n\"\n",
+    "            f\"Oppsummering:\\n{ex['ref_summary']}\\n##\\n\"\n",
+    "        )\n",
+    "    \n",
+    "    return \"\\n\".join(formatted)\n",
+    "\n",
+    "ids = [27]\n",
+    "#ids = [27, 39, 23]\n",
+    "\n",
+    "examples = [next(ex for ex in data if ex[\"id\"] == id) for id in ids]\n",
+    "\n",
+    "formatted_examples = format_examples(examples)\n",
+    "\n",
+    "print(formatted_examples)"
    ]
   },
   {
@@ -51,23 +112,33 @@
     "\n",
     "        self.terminators = tokenizer.eos_token_id\n",
     "  \n",
-    "    def format_prompt(self, v1, v2, ref):\n",
-    "        prompt = f\"\"\"\n",
-    "    You are a helpful assistant. Your task is to summarize the changes between two versions of a text.\n",
+    "    def format_prompt(self, v1, v2):\n",
+    "        prompt = f\"\"\"\\\n",
+    "    Du er en fagperson med ekspertise innen arealplanlegging og reguleringsplaner. Din oppgave er å bistå saksbehandlere med å identifisere og oppsummere forskjellene mellom to versjoner av tekst hentet fra en reguleringsplan. Dersom versjon 1 inneholder tekst, men ikke versjon 2, betyr det at teksten har blitt fjernet. Hvis det er omvendt har teksten blitt lagt til. Ikke referer til versjon 1 eller versjon 2 i oppsummeringen. Beskriv kun hva som er fjernet, lagt til eller endret.\n",
     "\n",
-    "    The first version is: {v1}\n",
+    "    - Oppsummeringen skal være så kort som mulig.\n",
+    "    - Unngå unødvendige detaljer.\n",
+    "    - Svar utelukkende med oppsummeringsteksten.\n",
+    "\n",
+    "    Bruk eksemplene som hjelp til å velge riktig ord.\n",
+    "\n",
+    "    {formatted_examples}\n",
+    "\n",
+    "    Oppsummer forskjellene mellom følgende to versjoner:\n",
+    "\n",
+    "    Versjon 1:\n",
+    "    {v1}\n",
     "    \n",
-    "    The second version is: {v2}\n",
+    "    Versjon 2:\n",
+    "    {v2}\n",
     "    \n",
-    "    Please provide a summary of the changes between the two versions.\n",
-    "\n",
-    "\n",
+    "    Oppsummering:\n",
     "    \"\"\"\n",
     "        return prompt\n",
     "\n",
-    "    def summarize(self, v1, v2, ref, max_tokens=50, temperature=0.0, top_p=0.9):\n",
+    "    def summarize(self, v1, v2, max_tokens=50, temperature=0.0, top_p=0.9):\n",
     "\n",
-    "        prompt = self.format_prompt(v1, v2, ref) \n",
+    "        prompt = self.format_prompt(v1, v2) \n",
     "\n",
     "        outputs = self.pipeline(\n",
     "            prompt,\n",
@@ -86,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9dbd4c14",
    "metadata": {},
    "outputs": [],
@@ -102,7 +173,35 @@
    "execution_count": null,
    "id": "dc92f1dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "32de591bdc5e4a4ab3174bbe00e41098",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cuda:0\n",
+      "  0%|          | 0/35 [00:00<?, ?it/s]/opt/conda/lib/python3.11/site-packages/transformers/generation/configuration_utils.py:631: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
+      "  warnings.warn(\n",
+      "/opt/conda/lib/python3.11/site-packages/transformers/generation/configuration_utils.py:636: UserWarning: `do_sample` is set to `False`. However, `top_p` is set to `0.9` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_p`.\n",
+      "  warnings.warn(\n",
+      " 29%|██▊       | 10/35 [00:15<00:37,  1.48s/it]You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n",
+      "100%|██████████| 35/35 [00:53<00:00,  1.54s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
@@ -111,7 +210,7 @@
     "\n",
     "results = []\n",
     "\n",
-    "data_sample = data[:1]\n",
+    "data_sample = data #data[:1]\n",
     "\n",
     "for item in tqdm(data_sample):\n",
     "\n",
@@ -119,23 +218,23 @@
     "    version_2 = item['version_2']\n",
     "    ref_summary = item['ref_summary'] \n",
     "\n",
-    "    output = model.summarize(version_1, version_2, ref_summary)\n",
+    "    output = model.summarize(version_1, version_2)\n",
     "\n",
     "    results.append({\n",
     "            'id': item['id'],\n",
     "            'ref_summary': ref_summary,\n",
-    "            'model_summary': output['generated_text'],\n",
+    "            'model_summary': output\n",
     "        })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "55fc722c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(base_dir / 'results/Meta-Llama-3-8B-Instruct_ZEROSHOT.jsonl', 'w') as f:\n",
+    "with open(base_dir / 'results/Meta-Llama-3-8B-Instruct_NOR_ONESHOT.jsonl', 'w') as f:\n",
     "    for result in results:\n",
     "        json.dump(result, f, ensure_ascii=False)\n",
     "        f.write('\\n')"
@@ -149,7 +248,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.16"
   }
  },
